--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,1 +1,19 @@
- 
+{
+ "manifest_version": 2,
+ "name": "WebWhatsNow",
+ "version": 0.1,
+ "content-scripts": [
+      {
+         "matches":[
+             "https://web.whatsapp.com"
+        ],
+         "css": [
+             "style.css"
+        ],
+         "js": [
+             "content.js"
+        ],
+      }
+]
+
+} 
