--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,6 +2,9 @@
  "manifest_version": 2,
  "name": "WebWhatsNow",
  "version": "0.1",
+    action": {
+    "default_popup": "index.html",
+  }
  "content-scripts": [
       {
          "matches":[
