--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,22 +1,21 @@
 {
- "manifest_version": 2,
- "name": "WebWhatsNow",
- "version": "0.1",
-    action": {
-    "default_popup": "index.html",
-  }
-}
- "content-scripts": [
-      {
-         "matches":[
-             "https://web.whatsapp.com"
-         ],
-         "css": [
-             "style.css"
-         ],
-         "js": [
-             "content.js"
-         ],
-      }
+  "manifest_version": 2,
+  "name": "WebWhatsNow",
+  "version": "0.1",
+  "browser_action": {
+    "default_popup": "index.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://web.whatsapp.com/*"
+      ],
+      "css": [
+        "style.css"
+      ],
+      "js": [
+        "content.js"
+      ]
+    }
   ]
-} 
+}
